<resources>
    <string name="app_name">QRCode</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_username_len">Username (5~10 char)</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_len">Password (6~20 char)</string>
    <string name="prompt_password_conform">Password Conform</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">About</string>
    <string name="pwd_rule">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="title_activity_main">Home</string>


    <!-- Strings to QR-->
    <string name="qr_action_scan">scan</string>
    <string name="qr_action_generate">generate</string>
    <string name="qr_prompt_msg">QR Code change while expired.</string>

    <!-- menu-->
    <string name="menu_save">save</string>


</resources>
